--- a/app/views/partials/theme/simple/profile/groups.liquid
+++ b/app/views/partials/theme/simple/profile/groups.liquid
@@ -2,9 +2,9 @@
   <div class="container md:px-5 md:py-5 mx-auto">
     <div class="flex flex-wrap -m-4">
       {% liquid
-        assign groups = '[{"name": "Top guns"}, {"name": "Green activities"}, {"name": "Cats"}, {"name": "Dogs"}, {"name": "Hamsters"}]' | parse_json
-        for group in groups
-          include 'theme/simple/profile/group_card', group: group
+        assign groups = list
+        for group in groups.results
+          include 'theme/simple/groups/card', group: group
         endfor
       %}
     </div>
