--- a/app/views/partials/theme/simple/items/card.liquid
+++ b/app/views/partials/theme/simple/items/card.liquid
@@ -1,5 +1,5 @@
 <div class="w-full px-0 mb-8 md:p-4 lg:w-1/3 md:w-1/2 card">
-  {% function_rc item_url = 'link_to', item: item %}
+  {% function_rc item_url = 'link_to', path: '/items/', item: item %}
 
   <a class="relative block h-64 overflow-hidden rounded shadow-sm" href="{{ item_url }}">
     {% function_rc cover_url = 'theme/simple/items/cover_url', item: item %}
