add slug to users

--- a/app/views/pages/admin/users/index.liquid
+++ b/app/views/pages/admin/users/index.liquid
@@ -2,8 +2,8 @@
   include 'lib/must_be_authenticated'
   include 'lib/must_be_superadmin'
 
-  function_rc list = 'lib/data/queries/users/search', limit: 200
+  function_rc list = 'lib/data/queries/users/search', limit: 200, sort_order: 'DESC'
 
   include 'theme/simple/admin/menu', section: 'users'
-  include 'theme/simple/admin/users/index', list: list
+  render 'theme/simple/admin/users/index', list: list
 %}
