--- a/app/views/partials/theme/simple/business_card.liquid
+++ b/app/views/partials/theme/simple/business_card.liquid
@@ -3,7 +3,7 @@
 %}
 
 <div class="flex">
-  <span class="business_card mr-2">{% print name %}</span>
+  <span class="business_card mr-2">By <a href="../profile/{{name}}">{% print name %}</a></span>
   {% if current_user and current_user.id != user.id %}
     {% render 'theme/simple/follow_button', current_user: current_user, user: user %}
   {% endif %}
