--- a/app/views/partials/lib/data/queries/users/search.liquid
+++ b/app/views/partials/lib/data/queries/users/search.liquid
@@ -1,5 +1,5 @@
 {% liquid
-  graphql r = 'users/search', limit: limit, username: username, ids: ids
+  graphql r = 'users/search', limit: limit, username: username, ids: ids, sort_order: sort_order, slug: slug
 
   return_rc r.users
 %}
