--- a/app/views/partials/theme/simple/marketplace_setup/index.liquid
+++ b/app/views/partials/theme/simple/marketplace_setup/index.liquid
@@ -1,4 +1,4 @@
-  <div class="mb-2 lg:w-4/6 md:w-3/4">
+  <div class="mb-2 w-full md:w-full">
     <h1 class="text-2xl">Global Stripe Configuration</h1>
     <ul class="leading-10 list-decimal list-inside">
       <li>
