add slug in profile/index

--- a/app/views/pages/profile/index.liquid
+++ b/app/views/pages/profile/index.liquid
@@ -2,7 +2,8 @@
 slug: profile
 ---
 {% liquid
-  function_rc user = 'lib/data/queries/users/find', username: context.params.slug2
+  echo context.params
+  function_rc user = 'lib/data/queries/users/find', slug: context.params.slug2 | slugify
   unless user.id
     render 'theme/simple/404', status: 404
     break
