--- a/app/views/partials/theme/simple/profile/card.liquid
+++ b/app/views/partials/theme/simple/profile/card.liquid
@@ -16,6 +16,7 @@
       </div>
       <div class="text-xl text-grey-dark font-light">
         {{ user.username  }}
+        {% if current_user.id == user.id %}[you]{% endif %}
       </div>
     </div>
   </div>
