--- a/app/views/partials/theme/simple/profile/sections/activity.liquid
+++ b/app/views/partials/theme/simple/profile/sections/activity.liquid
@@ -1,8 +1,15 @@
-{% render 'theme/simple/profile/activity_new' %}
-<div class="grid grid-cols-1 gap-6 my-6 md:px-5 md:py-5">
-  {% liquid
-    for record in list.results
-      render 'theme/simple/activities/feed_unit', payload: record.payload, current_user: current_user
-    endfor
-  %}
-</div>
+{% liquid
+  if user != blank and user.id == current_user.id
+    render 'theme/simple/profile/activity_new'
+  endif
+%}
+
+<section class="text-gray-700 body-font">
+  <div class="grid grid-cols-1 gap-6 my-6 md:px-5 md:py-5">
+    {% for record in list.results %}
+      {% render 'theme/simple/activities/feed_unit', payload: record.payload, current_user: current_user %}
+    {% else %}
+      <p class="container my-8 text-lg">{{ 'app.no_items_found' | t }}</p>
+    {% endfor %}
+  </div>
+</section>
