--- a/app/views/partials/theme/simple/profile/nav.liquid
+++ b/app/views/partials/theme/simple/profile/nav.liquid
@@ -1,11 +1,8 @@
 <div class="bg-white mb-5">
   <nav class="flex flex-col sm:flex-row">
     {% assign active_class = 'text-blue-500 border-b-2 font-medium border-blue-500'  %}
-    <a href="/profile/{{user.slug}}" class="text-gray-600 py-4 px-6 block hover:text-blue-500 focus:outline-none {% if tab == blank %}{{ active_class }}{% endif %}">
+    <a href="/profile/{{user.slug}}" class="text-gray-600 py-4 px-6 block hover:text-blue-500 focus:outline-none {% if tab == 'activity' %}{{ active_class }}{% endif %}">
       Activity
-    </a>
-    <a href="/profile/{{user.slug}}?private=true" class="text-gray-600 py-4 px-6 block hover:text-blue-500 focus:outline-none {% if tab == blank %}{{ active_class }}{% endif %}">
-      Private
     </a>
     <a href="/profile/{{user.slug}}/groups" class="text-gray-600 py-4 px-6 block hover:text-blue-500 focus:outline-none {% if tab == 'groups' %}{{ active_class }}{% endif %}">
       Groups
