--- a/app/views/partials/theme/simple/profile/sections/groups.liquid
+++ b/app/views/partials/theme/simple/profile/sections/groups.liquid
@@ -1,12 +1,9 @@
 <section class="text-gray-700 body-font">
-  <div class="container md:px-5 md:py-5 mx-auto">
-    <div class="flex flex-wrap -m-4">
-      {% liquid
-        assign groups = list
-        for group in groups.results
-          include 'theme/simple/groups/card', group: group
-        endfor
-      %}
-    </div>
+  <div class="container md:px-5 md:py-5 mx-auto -mx-4">
+    {% for record in list.results %}
+      {% render 'theme/simple/groups/card', group: record %}
+    {% else %}
+      <p class="container my-8 text-lg">{{ 'app.no_items_found' | t }}</p>
+    {% endfor %}
   </div>
 </section>
