--- a/app/views/partials/theme/simple/profile/show.liquid
+++ b/app/views/partials/theme/simple/profile/show.liquid
@@ -1,7 +1,8 @@
 <div class="flex flex-wrap -mx-4 -mb-4 md:mb-0">
   <div class="w-full md:w-1/4 px-4 mb-4 md:mb-0">
     {% liquid
-      include 'theme/simple/profile/card', user: user
+      include 'theme/simple/profile/card', user: user, current_user: current_user
+
       if user != blank and user.id == current_user.id
         include 'theme/simple/profile/profile_actions_owner', user: user
       elsif current_user != blank
