--- a/app/views/partials/theme/simple/profile/show.liquid
+++ b/app/views/partials/theme/simple/profile/show.liquid
@@ -1,3 +1,12 @@
+<pre>
+uuid  {% echo current_user.uuid %}
+</pre>
+<pre>
+lu {% echo list.results[0].lu.uuid %}
+</pre>
+<pre>
+ru {% echo list.results[0].ru.uuid %}
+</pre>
 <div class="flex flex-wrap -mx-4 -mb-4 md:mb-0">
   <div class="w-full md:w-1/4 px-4 mb-4 md:mb-0">
     {% liquid
