--- a/app/views/pages/profile/index.liquid
+++ b/app/views/pages/profile/index.liquid
@@ -20,15 +20,16 @@ slug: profile
   endunless
 
   assign section = query.section | default: 'activity'
+  assign user_uuid = user.uuid | default: 'there-should-be'
 
   if section == 'activity'
     function list = 'lib/data/queries/activities/search', feed: 'user-public', feed_id: user.id, limit: 100
   elsif section == 'groups'
-    function list = 'lib/data/queries/groups/search', limit: 20
+    function list = 'lib/data/queries/relationships/search', limit: 20, name: 'membership', l_uuid: user_uuid
   elsif section == 'following'
-    function list = 'lib/data/queries/users/search', limit: 20, ids: user.followed_user_ids
+    function list = 'lib/data/queries/relationships/search', limit: 20, name: 'followship', l_uuid: user_uuid
   elsif section == 'followers'
-    function list = 'lib/data/queries/users/search', limit: 20, ids: user.followed_user_ids
+    function list = 'lib/data/queries/relationships/search', limit: 20, name: 'followship', r_uuid: user_uuid
   endif
 
   include 'theme/simple/profile/show', section: section, user: user, list: list, current_user: current_user
