--- a/app/views/partials/lib/commands/comments/create.liquid
+++ b/app/views/partials/lib/commands/comments/create.liquid
@@ -1,6 +1,5 @@
 {%  liquid
-  function object = 'lib/commands/comments/create/build', object: context.params.comment, owner_id: context.current_user.id
-  echo object
+  function object = 'lib/commands/comments/create/build', object: object, owner_id: context.current_user.id
   function object = 'lib/commands/comments/create/check', object: object
 
   if object.valid
