--- a/app/views/partials/lib/commands/events/create.liquid
+++ b/app/views/partials/lib/commands/events/create.liquid
@@ -1,38 +1,33 @@
 {% background "bg-task-name", type: type, object_id: object_id, actor_id: actor_id, target_id: target_id, object: object %}
 
-{% liquid
-  function_rc actor = 'lib/data/queries/activities/users/find', id: actor_id
-%}
+  {% liquid
+    function_rc actor = 'lib/data/queries/activities/users/find', id: actor_id
 
-{% liquid
-  if object_id
-    function_rc object = 'lib/data/queries/activities/model', id: object_id
-  endif
-%}
+    if object_id
+      function_rc object = 'lib/data/queries/activities/model', id: object_id
+    endif
 
-{% comment %}'REFACTOR: find a better way of detecting type of target object', type: 'TODO'{% endcomment %}'
+    comment
+      'REFACTOR: find a better way of detecting type of target object', type: 'TODO'
+    endcomment
+    if type contains 'followed_user'
+      function_rc target = 'lib/data/queries/activities/users/find', id: target_id
+    else
+      function_rc target = 'lib/data/queries/activities/model', id: target_id
+    endif
 
-{% liquid
-  if type contains 'followed_user'
-    function_rc target = 'lib/data/queries/activities/users/find', id: target_id
-  else
-    function_rc target = 'lib/data/queries/activities/model', id: target_id
-  endif
-%}
-
-{% liquid
-  function_rc event = 'lib/commands/events/create/build', type: type, actor: actor, object: object, target: target
-  function_rc event = 'lib/commands/events/create/check', object: event
-
-  if event.valid
-    function_rc event = 'lib/commands/events/create/execute', object: event
+    function_rc event = 'lib/commands/events/create/build', type: type, actor: actor, object: object, target: target
+    function_rc event = 'lib/commands/events/create/check', object: event
 
     if event.valid
-      include 'lib/commands/events/broadcast/execute', object: event
+      function_rc event = 'lib/commands/events/create/execute', object: event
+
+      if event.valid
+        include 'lib/commands/events/broadcast/execute', object: event
+      endif
+    else
+      log event, type: 'errors.events.invalid showme'
     endif
-  else
-    log event, type: 'errors.events.invalid showme'
-  endif
-%}
+  %}
 
 {% endbackground %}
