--- a/app/views/partials/theme/simple/profile/owner_actions.liquid
+++ b/app/views/partials/theme/simple/profile/owner_actions.liquid
@@ -13,8 +13,8 @@
     -->
   </header>
 
-  <p>User ID: <div class="font-mono">{{ user.id }}</div></p>
-  <p>Email: <div class="font-mono">{{ user.email }}</div></p>
+  <p>User ID: <span class="font-mono">{{ user.id }}</span></p>
+  <p>Email: <span class="font-mono">{{ user.email }}</span></p>
 
   <p><a href="/u/{{ user.id }}">{{ 'app.items.yours' | t }}</a></p>
 </section>
