--- a/app/views/partials/lib/commands/comments/create/build.liquid
+++ b/app/views/partials/lib/commands/comments/create/build.liquid
@@ -1,14 +1,13 @@
 {% parse_json object %}
   {
-    "id":          {{ object.id | json }},
-    "creator_id":    {{ creator_id | json }},
-    "uuid":        {{ object.uuid | json }}
-    "commentable_uuid":        {{ object.commentable_uuid | json }}
-    "body":     {{ object.body | json }},
-    "title": {{ object.title | json }},
+    "uuid": {{ object.uuid | json }},
+    "creator_id": {{ context.current_user.id | json }},
+    "commentable_uuid": {{ object.commentable_uuid | json }},
+    "body": {{ object.body | json }},
+    "title": {{ object.title | json }}
   }
 {% endparse_json %}
 
 {% liquid
-  return_rc object
+  return object
 %}
