--- a/app/views/partials/theme/simple/profile/activity_new.liquid
+++ b/app/views/partials/theme/simple/profile/activity_new.liquid
@@ -1,18 +1,27 @@
-<div class="bg-white w-full shadow rounded-lg p-5">
-  <textarea class="bg-gray-200 w-full rounded-lg shadow-md p-2" rows="2" placeholder="What's new?"></textarea>
+<form action="/comments" method="post">
+  {% include 'authenticity_token' %}
+  {% liquid
+    assign uuid = '' | uuid
+  %}
+  <input type="hidden" name="comment[commentable_uuid]" value="{{user.uuid}}" />
+  <input type="hidden" name="comment[uuid]" value="{{uuid}}" />
+  <input type="hidden" name="return_to" value="{{context.location.pathname}}" />
+  <div class="bg-white shadow rounded-lg p-5 mx-5">
+    <textarea name="comment[body]" class="bg-gray-200 w-full rounded-lg shadow-md p-2" rows="2" placeholder="What's new?"></textarea>
 
-  <div class="w-full flex flex-row flex-wrap mt-3">
-    <div class="w-1/3">
-      <!--
-           <select class="w-full p-2 rounded-lg bg-gray-200 shadow border float-left">
-           <option>Public</option>
-           <option>Private</option>
-           </select>
-      -->
+    <div class="w-full flex flex-row flex-wrap mt-3">
+      <div class="w-1/3">
+        <!--
+            <select class="w-full p-2 rounded-lg bg-gray-200 shadow border float-left">
+            <option>Public</option>
+            <option>Private</option>
+            </select>
+        -->
 
-    </div>
-    <div class="w-2/3">
-      <button type="button" class="float-right button">Send</button>
+      </div>
+      <div class="w-2/3">
+        <button type="submit" class="float-right button">Send</button>
+      </div>
     </div>
   </div>
-</div>
+</form>
