Layout: change site background

--- a/app/views/partials/theme/simple/admin/activities/index.liquid
+++ b/app/views/partials/theme/simple/admin/activities/index.liquid
@@ -1,4 +1,4 @@
-<div class="w-full bg-gray-200 p-3">
+<div class="w-full p-3">
 
   <form action="" class="flex w-full flex-rows justify-between">
     <div class="flex flex-cols p-2 items-center">
