--- a/app/views/partials/theme/simple/admin/recent.liquid
+++ b/app/views/partials/theme/simple/admin/recent.liquid
@@ -8,7 +8,7 @@
           pr-0
         {% endif %}
       ">
-        <div class="h-full border rounded shadow">
+        <div class="h-full border rounded shadow bg-white">
           <div class="flex items-center justify-between px-4 py-3 border-b">
             <h3 class="text-lg font-heading">
               {{ 'admin.metric.'| append: metric.name | append: ".name" | t }}
