--- a/app/views/partials/theme/simple/activities/feed/index.liquid
+++ b/app/views/partials/theme/simple/activities/feed/index.liquid
@@ -2,8 +2,7 @@
   {% print current_user.username %}'s Private Activity Feed
 </div>
 
-
-<div class="w-full bg-gray-200 p-3">
+<div class="w-full p-3">
     {% render 'theme/simple/profile/activity_new' %}
   <div class="grid grid-cols-1 gap-6 my-6">
 
