--- a/app/views/partials/theme/simple/groups/activity.liquid
+++ b/app/views/partials/theme/simple/groups/activity.liquid
@@ -1,1 +1,15 @@
-feed
+{% liquid
+  if current_user.id
+    include 'theme/simple/comments/new_entry', commentable: group, placeholder: "What's new?"
+  endif
+%}
+
+<section class="text-gray-900 body-font">
+  <div class="grid grid-cols-1 gap-6 my-6 md:px-5 md:py-5">
+    {% for record in list.results %}
+      {% render 'theme/simple/activities/feed_unit', payload: record.payload, current_user: current_user %}
+    {% else %}
+      <p class="container my-8 text-lg">{{ 'app.no_items_found' | t }}</p>
+    {% endfor %}
+  </div>
+</section>
