--- a/app/views/partials/theme/simple/profile/activity_new.liquid
+++ b/app/views/partials/theme/simple/profile/activity_new.liquid
@@ -1,3 +1,3 @@
 {% liquid
-  include 'theme/simple/comments/new_entry', commentable: user, placeholder: "What's new?"
+  include 'theme/simple/comments/new_entry', commentable: user, commentable_type: 'user', placeholder: "What's new?"
 %}
