--- a/app/views/partials/lib/data/queries/groups/search.liquid
+++ b/app/views/partials/lib/data/queries/groups/search.liquid
@@ -1,5 +1,5 @@
 {% liquid
-  graphql r = 'groups/search', limit: limit, page: 1,
+  graphql r = 'groups/search', limit: limit, page: 1, owner_id: owner_id
 
   return r.groups
 %}
