--- a/app/views/partials/theme/simple/dashboard/groups/edit.liquid
+++ b/app/views/partials/theme/simple/dashboard/groups/edit.liquid
@@ -1,5 +1,5 @@
 <div class="container flex flex-wrap items-center mx-auto">
-  <h1 class="text-2xl">Edit Group: {{ group.name  }}</h1>
+  <h1 class="text-2xl">Edit Group: {{ object.name  }}</h1>
 </div>
 
-{% include 'theme/simple/dashboard/groups/form', group: group %}
+{% include 'theme/simple/dashboard/groups/form', object: object %}
