--- a/app/views/partials/lib/commands/groups/update/build.liquid
+++ b/app/views/partials/lib/commands/groups/update/build.liquid
@@ -2,10 +2,8 @@
   {
     "id":          {{ object.id | json }},
     "name":        {{ object.name | json }},
-    "tags":        {{ object.tags | downcase | split: ',' | uniq }},
-    "description": {{ object.description | default: "" | json }},
-    "category":    {{ object.category | default: "" | json }},
-    "price":       {{ object.price | plus: 0 | times: 100 | to_positive_integer: 1 }}
+    "summary":     {{ object.summary | json }},
+    "description": {{ object.description | default: "" | json }}
   }
 {% endparse_json %}
 
