--- a/app/views/partials/lib/commands/groups/update/check.liquid
+++ b/app/views/partials/lib/commands/groups/update/check.liquid
@@ -1,6 +1,3 @@
-{% assign MINIMAL_PRICE = 10 | times: 100 %}
-{% assign MAXIMAL_PRICE = 100000 | times: 100 %}
-
 {% liquid
   assign c = '{ "errors": {}, "valid": true }' | parse_json
 
@@ -8,16 +5,8 @@
     include 'lib/register_error', contract: c, field_name: 'name', key: 'app.errors.blank'
   endif
 
-  if object.price <  MINIMAL_PRICE
-    assign min_price = MINIMAL_PRICE | pricify_cents
-    assign msg = 'app.errors.too_little' | t: value: min_price
-    include 'lib/register_error', contract: c, field_name: 'price', message: msg
-  endif
-
-  if object.price >  MAXIMAL_PRICE
-    assign max_price = MAXIMAL_PRICE | pricify_cents
-    assign msg = 'app.errors.too_much' | t: value: max_price
-    include 'lib/register_error', contract: c, field_name: 'price', message: msg
+  if object.summary == blank
+    include 'lib/register_error', contract: c, field_name: 'summary', key: 'app.errors.blank'
   endif
 
   if object.description == blank
