--- a/app/views/pages/items/delete.liquid
+++ b/app/views/pages/items/delete.liquid
@@ -8,6 +8,8 @@ method: post
   function_rc object = 'lib/commands/items/delete', item: item
 
   if object.valid
+    include 'lib/commands/events/create', type: 'item_deleted', actor_id: context.current_user.id, object_id: context.params.id    
+
     include 'redirect_to', url: '/dashboard/sell/items', notice: 'app.items.deleted'
   else
     assign error = object.errors.base[0]
