--- a/app/views/partials/theme/simple/items/show.liquid
+++ b/app/views/partials/theme/simple/items/show.liquid
@@ -65,7 +65,9 @@
 
       <div class="flex mt-4">
         <span class="text-2xl text-gray-900 ">{{ item.price | pricify_cents }}</span>
-
+        {% if context.current_user.id  %}
+          {% include 'theme/simple/wishlist/wishitem', item: item %}
+        {% endif %}
         <form action="/orders/new" method="get" class="ml-auto ">
           <input type="hidden" name="item_id" value="{{ item.id }}">
           <button id="buybutton" class="button">
